tests/format/misc/errors/invalid-typescript-decorators/issue-9102.ts
@Decorator()
type T = 1;
class C {}
